syntax = "proto3";

option csharp_namespace = "OrderingSystemUsingGRPC.InventoryService";

package inventory;

service InventoryServiceP {
  rpc DeductItemsBalance (DeductItemsRequest) returns (DeductItemsResponse);
}

message DeductItemsRequest {
  repeated InventoryItem items = 1;
  string order_id = 2;
}

message InventoryItem {
  string item_id = 1;
  int32 quantity = 2;
}

message DeductItemsResponse {
  bool success = 1;
  string message = 2;
  InventoryStatus status = 3;
  repeated string out_of_stock_items = 4;
}

enum InventoryStatus {
  INVENTORY_UNKNOWN = 0;
  INVENTORY_AVAILABLE = 1;
  INVENTORY_INSUFFICIENT = 2;
  INVENTORY_ERROR = 3;
}